samples/_failures_safe/1761262918_4d0e80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c10c91f7.c: In function ‘main’:
./samples/SAFE/__tmp_c10c91f7.c:161:12: error: missing terminating " character
  161 |     printf("Graph BFS Distance Calculator
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c10c91f7.c:161:5: error: expected expression at end of input
  161 |     printf("Graph BFS Distance Calculator
      |     ^~~~~~
./samples/SAFE/__tmp_c10c91f7.c:161:5: error: expected declaration or statement at end of input
